# srs-librtmp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh
include.private/core/: srs_core.hpp  srs_core_autofree.hpp  srs_core_mem_watch.hpp  srs_core_performance.hpp  srs_core_time.hpp
include.private/kernel/: srs_kernel_aac.hpp  srs_kernel_balance.hpp  srs_kernel_buffer.hpp  srs_kernel_codec.hpp  srs_kernel_consts.hpp  srs_kernel_error.hpp  srs_kernel_file.hpp  srs_kernel_flv.hpp  srs_kernel_io.hpp  srs_kernel_log.hpp  srs_kernel_mp3.hpp  srs_kernel_mp4.hpp  srs_kernel_stream.hpp  srs_kernel_ts.hpp  srs_kernel_utility.hpp
include.private/libs/: srs_lib_bandwidth.hpp  srs_lib_simple_socket.hpp
include.private/protocol/: srs_http_stack.hpp  srs_protocol_amf0.hpp  srs_protocol_format.hpp  srs_protocol_io.hpp  srs_protocol_json.hpp  srs_protocol_kbps.hpp  srs_protocol_stream.hpp  srs_protocol_utility.hpp  srs_raw_avc.hpp  srs_rtmp_handshake.hpp  srs_rtmp_msg_array.hpp  srs_rtmp_stack.hpp  srs_rtsp_stack.hpp
objs/: Makefile  srs_auto_headers.hpp
objs/research/: librtmp
research/librtmp/: CMakeLists.txt  Makefile  srs_aac_raw_publish.c  srs_audio_raw_publish.c  srs_bandwidth_check.c  srs_detect_rtmp.c  srs_flv_injecter.c  srs_flv_parser.c  srs_h264_raw_publish.c  srs_ingest_flv.c  srs_ingest_mp4.c  srs_ingest_rtmp.c  srs_play.c  srs_publish.c  srs_rtmp_dump.c
src/core/: srs_core.cpp  srs_core_autofree.cpp  srs_core_mem_watch.cpp  srs_core_performance.cpp  srs_core_time.cpp  srs_core_version3.cpp
src/kernel/: srs_kernel_aac.cpp  srs_kernel_balance.cpp  srs_kernel_buffer.cpp  srs_kernel_codec.cpp  srs_kernel_consts.cpp  srs_kernel_error.cpp  srs_kernel_file.cpp  srs_kernel_flv.cpp  srs_kernel_io.cpp  srs_kernel_log.cpp  srs_kernel_mp3.cpp  srs_kernel_mp4.cpp  srs_kernel_stream.cpp  srs_kernel_ts.cpp  srs_kernel_utility.cpp
src/libs/: srs_lib_bandwidth.cpp  srs_lib_simple_socket.cpp  (+1 more)
(+13 files in other folders)
